[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/accepts/Credits.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ControlFlow.gd" type="Script" id=2]
[ext_resource path="res://scenes/accepts/Controls.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/MainMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Gameplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/accepts/GameComplete.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/accepts/LevelComplete.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Silkscreen/silkscreen.tres" type="DynamicFont" id=8]
[ext_resource path="res://scenes/CraftWiki.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/accepts/Notes.tscn" type="PackedScene" id=10]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 8 )
Font/fonts/TheFont = null

[node name="ControlFlow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" parent="." instance=ExtResource( 1 )]

[node name="Controls" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Notes" parent="." instance=ExtResource( 10 )]
visible = false

[node name="MainMenu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Gameplay" parent="." instance=ExtResource( 5 )]
visible = false

[node name="game_done" parent="." instance=ExtResource( 6 )]
visible = false

[node name="level_done" parent="." instance=ExtResource( 7 )]
visible = false

[node name="level_selection" type="ScrollContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v" type="VBoxContainer" parent="level_selection"]
theme = SubResource( 1 )

[node name="CraftWiki" parent="." instance=ExtResource( 9 )]
visible = false
[connection signal="accepted" from="Credits" to="." method="_on_Credits_accepted"]
[connection signal="level_done" from="Gameplay" to="." method="_on_Gameplay_level_done"]
